--- a/ClrKahoot/Pages/Index.cshtml
+++ b/ClrKahoot/Pages/Index.cshtml
@@ -35,6 +35,7 @@ question/answer lengths + answer word wrap (can look ugly)
 		height: 150px;
 		min-width: 300px;
 		max-width: 300px;
+		font-size: 20px;
 	}
 	.button-answer-b {
 		border-color: white;
@@ -43,6 +44,7 @@ question/answer lengths + answer word wrap (can look ugly)
 		height: 150px;
 		min-width: 300px;
 		max-width: 300px;
+		font-size: 20px;
 	}
 	.button-answer-c {
 		border-color: white;
@@ -51,6 +53,7 @@ question/answer lengths + answer word wrap (can look ugly)
 		height: 150px;
 		min-width: 300px;
 		max-width: 300px;
+		font-size: 20px;
 	}
 	.button-answer-d {
 		border-color: white;
@@ -59,6 +62,7 @@ question/answer lengths + answer word wrap (can look ugly)
 		height: 150px;
 		min-width: 300px;
 		max-width: 300px;
+		font-size: 20px;
 	}
 
 </style>
@@ -109,7 +113,7 @@ question/answer lengths + answer word wrap (can look ugly)
 					<br />
 					<div>
 						<div id="gQuestionPanel" style="visibility:hidden">
-							Question <div id="gQuestionNumber" >0</div> out of <div id="gQuestionTotal">0</div> (progress <div id="gCompletionStats">0%</div>)<br />
+							Question <div id="gQuestionNumber" >0</div> out of <div id="gQuestionTotal">0</div> (players answered <div id="gCompletionStats">0%</div>)<br />
 							<br />
 							<div id="gQuestionContent"></div> <br />
 							<table border="0">
