--- a/ClrKahoot/Pages/Index.cshtml
+++ b/ClrKahoot/Pages/Index.cshtml
@@ -528,7 +528,7 @@ question/answer lengths + answer word wrap (can look ugly)
 			// update the inputs for when playing a game
 			document.getElementById('gQuestionNumber').innerText = num+1;
 			document.getElementById('gQuestionTotal').innerText = total;
-			document.getElementById('gQuestionContent').innerHTML = "<p>" + content + "</p>";
+			document.getElementById('gQuestionContent').innerHTML = "<pre>" + content + "</pre>";
 			document.getElementById('gQuestionAns0').innerHTML = ans0;
 			document.getElementById('gQuestionAns1').innerHTML = ans1;
 			document.getElementById('gQuestionAns2').innerHTML = ans2;
